Edited 3DGUI.